force-app/main/default/objects/WEBXAccount__c/WEBXAccount__c.object-meta.xml
<CustomObject>
    <description>WEBXAccount created by Admin user</description>
    <label>WebEx Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebEx Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>