force-app/main/default/objects/WEBXAccount__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <description>For multiple logins for the same SalesForce.com user, a value of ‘1’ means that this login is the default.</description>
    <label>Default</label>
    <length>1</length>
    <type>Text</type>
</CustomField>