force-app/main/default/objects/WEBXAccount__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password to logon to SalesCenter.  It is encrypted so don’t bother to modify it.</description>
    <label>Password</label>
    <length>250</length>
    <type>Text</type>
</CustomField>