force-app/main/default/objects/WEBXAccount__c/fields/Siteurl__c.field-meta.xml
<CustomField>
    <fullName>Siteurl__c</fullName>
    <description>SalesCenter site.</description>
    <label>Site Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>