force-app/main/default/objects/WEBXAccount__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <description>The Salesforce.com user id.</description>
    <label>UID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>